# plug-n-cook

./: README.md  index.html  pyproject.toml
app/: main.py
