[tool.poetry]
name = "plug-n-cook"
version = "0.1.0"
description = "delivering personalized recipes based on what's in your fridge"
authors = ["nimoes <mhseo2180@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
